[gd_scene load_steps=20 format=3 uid="uid://bcgsm88544px4"]

[ext_resource type="Texture2D" uid="uid://dw1mpi68bj4p2" path="res://player_bot/player1_sheet.png" id="1_78u1t"]
[ext_resource type="Script" path="res://player_bot/player_bot.gd" id="1_coaxk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_35p64"]
atlas = ExtResource("1_78u1t")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dm0w"]
atlas = ExtResource("1_78u1t")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c52m6"]
atlas = ExtResource("1_78u1t")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ht5lt"]
atlas = ExtResource("1_78u1t")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5rej"]
atlas = ExtResource("1_78u1t")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gdg8"]
atlas = ExtResource("1_78u1t")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_21gun"]
atlas = ExtResource("1_78u1t")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtrig"]
atlas = ExtResource("1_78u1t")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3oi1b"]
atlas = ExtResource("1_78u1t")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuxhy"]
atlas = ExtResource("1_78u1t")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsu6s"]
atlas = ExtResource("1_78u1t")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ama3"]
atlas = ExtResource("1_78u1t")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7c08"]
atlas = ExtResource("1_78u1t")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cel2q"]
atlas = ExtResource("1_78u1t")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bimqv"]
atlas = ExtResource("1_78u1t")
region = Rect2(384, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_5h44o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_35p64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dm0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c52m6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ht5lt")
}],
"loop": false,
"name": &"fall",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5rej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gdg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21gun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gdg8")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtrig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3oi1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuxhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsu6s")
}],
"loop": false,
"name": &"jump",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ama3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7c08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cel2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bimqv")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1mk1q"]
size = Vector2(23, 54)

[node name="PlayerBot" type="CharacterBody2D"]
script = ExtResource("1_coaxk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5h44o")
animation = &"fall"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.5, 2)
shape = SubResource("RectangleShape2D_1mk1q")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 36

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(2.5, 2)
shape = SubResource("RectangleShape2D_1mk1q")

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_area_2d_body_entered"]
